--- a/front/algorius/form.ui
+++ b/front/algorius/form.ui
@@ -12788,6 +12788,26 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
                   </item>
                  </widget>
                 </item>
+                <item row="3" column="1">
+                 <widget class="QLCDNumber" name="lcdNumber_8">
+                  <property name="styleSheet">
+                   <string notr="true">color: rgb(6, 208, 164);
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(13, 13, 13, 255), stop:0.368715 rgba(26, 26, 26, 255), stop:0.675978 rgba(42, 42, 42, 255), stop:1 rgba(51, 51, 51, 255));</string>
+                  </property>
+                  <property name="lineWidth">
+                   <number>0</number>
+                  </property>
+                  <property name="midLineWidth">
+                   <number>2</number>
+                  </property>
+                  <property name="smallDecimalPoint">
+                   <bool>true</bool>
+                  </property>
+                  <property name="digitCount">
+                   <number>6</number>
+                  </property>
+                 </widget>
+                </item>
                </layout>
               </widget>
              </item>
