--- a/front/rsc.qrc
+++ b/front/rsc.qrc
@@ -4,6 +4,7 @@
     <file>icons8-ações-96.ico</file>
     <file>icons8-add-album-96.ico</file>
     <file>icons8-add-tab-50.ico</file>
+    <file>user.svg</file>
     <file>icons8-add-tab-100.ico</file>
     <file>icons8-adicionar-50.ico</file>
     <file>icons8-adicionar-50-2.ico</file>
